@@ -1,5 +1,5 @@
-Cython==0.29.19
+Cython==0.29.23
 nose==1.3.7
-pip==20.1.1
-mypy==0.770; python_version >= "3.5"
-black==21.6b0; python_version >= "3.6"
+pip==21.1.2
+mypy==0.910
+black==21.6b0
